# rust1

./: Cargo.toml  README.md  build.rs  hello.c  run_hello.c
src/: lib.rs  rust1c.c
