[package]
name = "rust1"
version = "0.1.0"
authors = ["hernad"]

[lib]
name = "rust1"
crate-type = ["dylib"]


#[target.'cfg(windows)'.dependencies]
#winapi = { version = "0.3", features = ["winuser"] }

[dependencies]
libc = "0.2.42"
winapi = { version = "0.3", features = ["winuser"] }

[build-dependencies]
cc = "1.0.18"
